# ServiceMind_Agents

./: .gitignore  AGENTS.md  package.json  pnpm-lock.yaml  项目想法.md
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260622_001_bootstrap_foundation_schema.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: router.py  security.py
apps/api/app/api/routes/: agent.py  approval.py  health.py  knowledge.py  mcp_tools.py  tickets.py
apps/api/app/core/: config.py
apps/api/app/models/: __init__.py  foundation.py
apps/api/app/modules/: input_security.py
apps/api/app/modules/agent/: __init__.py  repository.py  runtime.py  schemas.py  service.py
apps/api/app/modules/approval/: repository.py  schemas.py  service.py
apps/api/app/modules/knowledge/: chunking.py  embedding.py  repository.py  schemas.py  service.py
apps/api/scripts/: verify-db.ps1  verify-ticket-workflow.ps1
apps/api/tests/: test_health.py
apps/api/tests/agent/: __init__.py  fakes.py  test_agent_postgres_smoke.py  test_agent_routes.py  test_agent_runtime.py  test_agent_service.py
apps/api/tests/approval/: test_approval_routes.py  test_approval_service.py
apps/api/tests/db/: test_metadata.py  test_postgres_ddl.py
apps/api/tests/knowledge/: fakes.py  test_knowledge_postgres_smoke.py  test_knowledge_routes.py  test_knowledge_service.py
apps/api/tests/mcp_tools/: test_mcp_tool_routes.py  test_mcp_tool_service.py
apps/api/tests/tickets/: fakes.py  test_ticket_postgres_smoke.py  test_ticket_routes.py  test_ticket_service.py
(+87 files in other folders)
