[project]
name = "servicemind-api"
version = "0.1.0"
description = "ServiceMind Agents FastAPI backend"
requires-python = ">=3.11,<4.0"
dependencies = [
    "alembic>=1.13.0,<2.0.0",
    "fastapi[standard]>=0.115.0,<1.0.0",
    "langgraph>=1.0.0,<2.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.8.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.8.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require external services such as PostgreSQL",
]
